gen/1_programmability/2_non_incremental/e_cargo.txt
   Compiling pie v0.1.0 (/pie)
error[E0308]: mismatched types
  --> src/context/non_incremental.rs:47:30
   |
47 |         context.require_task(&ReturnHelloWorld).to_lowercase()
   |                 ------------ ^^^^^^^^^^^^^^^^^ expected `&ToLowerCase`, found `&ReturnHelloWorld`
   |                 |
   |                 arguments to this method are incorrect
   |
   = note: expected reference `&ToLowerCase`
              found reference `&non_incremental::test::test_require_task_problematic::ReturnHelloWorld`
note: method defined here
  --> src/lib.rs:18:6
   |
18 |   fn require_task(&mut self, task: &T) -> T::Output;
   |      ^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0308`.
error: could not compile `pie` (lib test) due to previous error
